# Qi-GL

./: .gitmodules  CMakeLists.txt  Makefile  README.md  data.h  imgui.ini  main  main.cpp  utils.h  view.cpp  view.h
imgui/: imgui_glfw.h
shaders/: fshader.fsh  vshader.vsh
src/: CMakeLists.txt  data.h  misc.h  obj.cpp  obj.h  obj_.cpp  obj_.h  object.cpp  object.h  shader.h  texture.h  view.cpp  view.h
src/algorithms/: common.cpp  minisurface.cpp  normal_gen.cpp  texture_gen.cpp
src/gl_egine/include/: gl_egine.h  vertices.h
src/glad/: CMakeLists.txt
src/imgui/: CMakeLists.txt  imgui_glfw.h
src/shaders/: fshader.fs  shader.cpp  vshader.vs
